# c-openhab-rest-client

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: linux-aarch64.cmake  linux-armhf.cmake  windows-x64.cmake  windows-x86.cmake
include/openhab/: openhab.h  openhab_api.h  openhab_client.h
src/: openhab_api.c  openhab_client.c
test/: test.c
